put back star selector but not before and after - this still solves the gap on nav hover an the weird header shift to the left

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
 
 /* Scaffolding and type
  ================================================== */
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 16px;
 }
